260114 - Updates 필수기능 완료 >회전발판, 이동발판 2개 액터 >회전, 이동 기능 구현 (Tick 제거 - 도전과제) >UPROPERTY 사용 디테일 패널 조정가능 값 입력 도전기능 완료 >Tick 제거 - FTimerHandle 사용하여 이동과 회전 조절 >시간이 아닌, 끝 위치 도달 시 사라지거나 다시 시작 위치로 복귀하는 로직으로 작성 (Start, End 포인트 2개 디테일 패널에서 할당 가능) >SpawnManager(Spawn 관리 Actor)를 사용해, 2개 오브젝트의 랜덤 생성위치 지정 >랜덤 생성 시, SpawnManager의 Min, Max값에 따라 랜덤생성 (회전 축 변경의 경우 일시 비활성화)

--- a/u_260122_Project006.uproject
+++ b/u_260122_Project006.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "u_260122_Project006",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
